--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "Foundry": {
-    "Endpoint": "",
-    "ApiKey": "",
+    "Endpoint": "https://westus3.api.cognitive.microsoft.com/models",
+    "ApiKey": "80f3027af3614e2aa8698528e1caeef2",
     "DeploymentName": "phi-4-mini-instruct",
     "ApiVersion": "2024-05-01-preview"
   }
