deploy Phi-4-mini-instruct for test

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "Foundry": {
-    "Endpoint": "https://westus3.api.cognitive.microsoft.com/models",
+    "Endpoint": "https://westus3.api.cognitive.microsoft.com",
     "ApiKey": "80f3027af3614e2aa8698528e1caeef2",
     "DeploymentName": "phi-4-mini-instruct",
     "ApiVersion": "2024-05-01-preview"
