--- a/src/ZavaStorefront.csproj
+++ b/src/ZavaStorefront.csproj
@@ -10,6 +10,7 @@
    <PackageReference Include="System.Text.Encodings.Web" Version="4.5.1" />
    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
    <PackageReference Include="Microsoft.Data.SqlClient" Version="2.1.1" />
+     <PackageReference Include="Azure.Identity" Version="1.11.3" />
  </ItemGroup>
 
 </Project>
