change endpoint for mi

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "Foundry": {
-    "Endpoint": "https://westus3.api.cognitive.microsoft.com/",
-    "DeploymentName": "Phi-4-mini-instruct",
+    "Endpoint": "https://zavastorefoundrydev.cognitiveservices.azure.com/",
+    "DeploymentName": "phi-4-mini-instruct",
     "ApiVersion": "2024-05-01-preview"
   }
 }
