--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -5,6 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ContentSafety": {
+    "Endpoint": "https://eastus.api.cognitive.microsoft.com/",
+    "ApiKey": null
+  },
   "AllowedHosts": "*",
   "Foundry": {
     "Endpoint": "https://myailanguage008.services.ai.azure.com/",
