--- a/src/ZavaStorefront.csproj
+++ b/src/ZavaStorefront.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="2.1.1" />
     <PackageReference Include="Azure.Identity" Version="1.11.4" />
+    <PackageReference Include="Azure.AI.ContentSafety" Version="1.0.0" />
  </ItemGroup>
 
 </Project>
