--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -6,8 +6,7 @@
     }
   },
   "ContentSafety": {
-    "Endpoint": "https://eastus.api.cognitive.microsoft.com/",
-    "ApiKey": null
+    "Endpoint": "https://mytestzava008.cognitiveservices.azure.com/"
   },
   "AllowedHosts": "*",
   "Foundry": {
